Tests and check passed! Only a note stating "checking for future file timestamps ... NOTE   unable to verify current time". Minor stuff, probably. Everything else is correct.

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,12 +13,15 @@ knitr::opts_chunk$set(
 )
 ```
 
-# cehAforos
+
+## Overview
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of cehAforos is to allow users to easily download datasets for gauging stations in Spanish rivers. The datasets are available at the [CEDEX web site](https://ceh.cedex.es/anuarioaforos/demarcaciones.asp). 
+
+The goal of the $\tt{cehAforos}$ R package is to allow users to easily download historical data from for gauging stations in Spanish rivers. Those datasets are available at the [CEDEX web](https://ceh.cedex.es/anuarioaforos/demarcaciones.asp) archive. Although files can be downloaded by hand one by one, $\texttt{cehAforos}$ allows the automatic retrieval of any of those files, appending WGS84 UTM30 (EPSG:32630) coordinates to the datasets. In addition, date fields are formatted accordingly.
+
 
 ## Installation
 
@@ -27,13 +30,15 @@ You can install the development version of cehAforos from [GitHub](https://githu
 ```{r install_it}
 # install.packages("githubinstall")
 # githubinstall::gh_install_packages("cehAforos", "devel")
+library(cehAforos)
 ```
+
 
 ## Example
 
 This is a basic example which shows you how to download daily data from river gauging stations for the Ebro basin:
 
-```{r example1}
+```{r example1, eval = FALSE}
 # Use verbose = TRUE (default) if you want to track progress.
 x <- get_ceh_data(file_name = "afliq", basin_nam = "ebro", verbose = FALSE)
 ```
@@ -42,7 +47,10 @@ x <- get_ceh_data(file_name = "afliq", basin_nam = "ebro", verbose = FALSE)
 
 We can retrieve as easily the same datasets for all stations and from all the basins by omitting the $\tt{basin}$ parameter.
 
-```{r example2}
-# x <- read_cedex_basin(table = "afliq", verbose = FALSE)
+```{r example2, eval = FALSE}
+x <- get_ceh_data(file_name = "afliq", verbose = FALSE)
 ```
 
+<br>
+
+Notice that the retrieval can be done for all basin stations at once, but files must be retrieved one by one. For a exhaustive list of files to download, go to the CEDEX web.
