--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 
-The goal of the $\tt{cehAforos}$ R package is to allow users to easily download historical data from for gauging stations in Spanish rivers. Those datasets are available at the [CEDEX web](https://ceh.cedex.es/anuarioaforos/demarcaciones.asp) archive. Although files can be downloaded by hand one by one, $\texttt{cehAforos}$ allows the automatic retrieval of any of those files, appending WGS84 UTM30 (EPSG:32630) coordinates to the datasets. In addition, date fields are formatted accordingly.
+The goal of the $\tt{hydrospain}$ R package is to allow users to easily download historical data from for gauging stations in Spanish rivers. Those datasets are available at the [CEDEX web](https://ceh.cedex.es/anuarioaforos/demarcaciones.asp) archive. Although files can be downloaded by hand one by one, $\texttt{hydrospain}$ allows the automatic retrieval of any of those files, appending WGS84 UTM30 (EPSG:32630) coordinates to the datasets. In addition, date fields are formatted accordingly.
 
 
 ## Installation
@@ -30,7 +30,7 @@ You can install the development version of hydrospain from [GitHub](https://gith
 ```{r install_it}
 # install.packages("githubinstall")
 # githubinstall::gh_install_packages("hydrospain", "devel")
-library(cehAforos)
+library(hydrospain)
 ```
 
 
