--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 
-The goal of the `hydrospain` R package is to allow users to easily download historical data from for gauging stations in Spanish rivers. Those datasets are available at the [CEDEX](https://ceh.cedex.es/anuarioaforos/demarcaciones.asp) web archive. Although files can be downloaded by hand one by one, `hydrospain` allows the automatic retrieval of any of those files, appending WGS84 UTM30 (EPSG:32630) coordinates to the datasets and. optionally, creating a spatial [sf](https://cran.r-project.org/web/packages/sf/index.html) object. In addition, date fields are formatted accordingly.
+The goal of the `hydrospain` R package is to allow users to easily download historical data from for gauging stations in Spanish rivers. Those datasets are available at the [CEDEX](https://ceh.cedex.es/anuarioaforos/demarcaciones.asp) web archive. Although files can be downloaded by hand one by one, `hydrospain` allows the automatic retrieval of any of those files, appending WGS84 UTM30 (EPSG:32630) coordinates to the datasets and. optionally, creating a spatial [sf](https://CRAN.R-project.org/package=sf) object. In addition, date fields are formatted accordingly.
 
 
 ## Installation
