--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 ## Overview
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/emf-creaf/hydrospain/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/emf-creaf/hydrospain/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 
